new endpoint for disconnecting user
